[package]
name = "TaskApp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
rand = "0.8.5"
serde = {version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
slint = "1.8.0"


[build-dependencies]
slint-build = "1.8.0"
winresource = "0.1.19"
